# cmake_base

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in
examples/: CMakeLists.txt
src/: CMakeLists.txt
